fix right alignment of buttons

--- a/src/content/app/tools/blast/views/blast-form/BlastForm.scss
+++ b/src/content/app/tools/blast/views/blast-form/BlastForm.scss
@@ -10,7 +10,7 @@
 .mainContainer {
   height: 100%;
   padding-left: 65px;
-  padding-right: 10px;
+  padding-right: 20px;
 }
 
 .mainContainerSmall {
